make sure user and input have the highest-possible z-index: 2 for now

--- a/resources/public/css/world.css
+++ b/resources/public/css/world.css
@@ -23,13 +23,13 @@
 #me {
     left:1%;
     bottom:5%;
-    z-index:1;
+    z-index:2;
     max-height:9%;
     position:absolute;
 }
 
 #placebox {
-    z-index:1;
+    z-index:2;
     left:1%;
     top:8%;
     max-height:60%;
@@ -37,5 +37,9 @@
 }
 
 #userinputdiv {
+    z-index:1;
+    left:1%;
+    top:60%;
+    position: absolute;
 }
 
